--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
   "name": "slashed",
-  "version": "1.2.4",
+  "version": "1.3.0",
   "description": "Fast, opinionated, minimalist web framework for NodeJS",
   "main": "index.js",
   "dependencies": {
     "accepts": "1.3.x",
-    "methods": "1.1.x",
-    "path-to-regexp": "^2.1.x",
-    "qs": "6.5.x",
-    "statuses": "^1.5.0",
     "cache-content-type": "^1.0.0",
-    "content-disposition": "~0.5.2",
+    "content-disposition": "^0.5.3",
     "content-type": "^1.0.4",
-    "cookies": "~0.7.1",
+    "cookies": "^0.7.3",
     "delegates": "^1.0.0",
     "destroy": "^1.0.4",
     "error-inject": "^1.0.0",
@@ -20,21 +16,25 @@
     "fresh": "~0.5.2",
     "http-assert": "^1.3.0",
     "http-errors": "^1.6.3",
+    "koa-compose": "4.1.x",
+    "koa-compress": "3.0.x",
     "koa-is-json": "^1.0.0",
+    "methods": "1.1.x",
     "on-finished": "^2.3.0",
     "only": "~0.0.2",
     "parseurl": "^1.3.2",
+    "path-to-regexp": "^2.1.x",
+    "qs": "6.5.x",
+    "servue": "^0.6.8",
+    "statuses": "^1.5.0",
     "type-is": "^1.6.16",
-    "vary": "^1.1.2",
     "urijs": "~1.19.1",
-    "koa-compress": "3.0.x",
-    "koa-compose": "4.1.x"
+    "vary": "^1.1.2"
   },
   "scripts": {
-    "test": "node tests/test.js"
+    "test": "node tests/demo.js",
+    "demo": "node tests/demo.js"
   },
   "license": "MIT",
-  "devDependencies": {
-    "servue": "^0.5.0"
-  }
+  "devDependencies": {}
 }
